@@ -3521,8 +3521,6 @@ SEXP do_locator(SEXP call, SEXP op, SEXP args, SEXP env)
     }
 }
 
-#define THRESHOLD 0.25
-
 static void drawLabel(double xi, double yi, int pos, double offset, char *l, DevDesc *dd)
 {
     switch (pos)
@@ -3542,14 +3540,18 @@ static void drawLabel(double xi, double yi, int pos, double offset, char *l, Dev
     case 1:
         yi = yi - offset;
         GText(xi, yi, INCHES, l, 0.5, 1 - (0.5 - Rf_gpptr(dd)->yCharOffset), 0.0, dd);
+        break;
+    case 0:
+        GText(xi, yi, INCHES, l, 0.0, 0.0, 0.0, dd);
+        break;
     }
 }
 
 SEXP do_identify(SEXP call, SEXP op, SEXP args, SEXP env)
 {
     SEXP ans, x, y, l, ind, pos, Offset, draw, saveans;
-    double xi, yi, xp, yp, d, dmin, offset;
-    int i, imin, k, n, npts, plot, posi, warn;
+    double xi, yi, xp, yp, d, dmin, offset, tol;
+    int atpen, i, imin, k, n, npts, plot, posi, warn;
     DevDesc *dd = CurrentDevice();
 
     /* If we are replaying the display list, then just redraw the
@@ -3570,6 +3572,8 @@ SEXP do_identify(SEXP call, SEXP op, SEXP args, SEXP env)
         args = CDR(args);
         draw = CAR(args);
         n = length(x);
+        Rf_gpptr(dd)->cex = Rf_gpptr(dd)->cexbase;
+        offset = GConvertXUnits(asReal(Offset), CHARS, INCHES, dd);
         for (i = 0; i < n; i++)
         {
             plot = LOGICAL(ind)[i];
@@ -3579,7 +3583,6 @@ SEXP do_identify(SEXP call, SEXP op, SEXP args, SEXP env)
                 yi = REAL(y)[i];
                 GConvert(&xi, &yi, USER, INCHES, dd);
                 posi = INTEGER(pos)[i];
-                offset = GConvertXUnits(asReal(Offset), CHARS, INCHES, dd);
                 drawLabel(xi, yi, posi, offset, CHAR(STRING_ELT(l, i)), dd);
             }
         }
@@ -3601,10 +3604,20 @@ SEXP do_identify(SEXP call, SEXP op, SEXP args, SEXP env)
         plot = asLogical(CAR(args));
         args = CDR(args);
         Offset = CAR(args);
+        args = CDR(args);
+        tol = asReal(CAR(args));
+        args = CDR(args);
+        atpen = asLogical(CAR(args));
         if (npts <= 0 || npts == NA_INTEGER)
             error(_("invalid number of points in identify()"));
         if (!isReal(x) || !isReal(y) || !isString(l) || !isReal(Offset))
             errorcall(call, _("incorrect argument type"));
+        if (tol <= 0 || ISNAN(tol))
+            errorcall(call, _("invalid value for 'tolerance'"));
+        if (plot == NA_LOGICAL)
+            errorcall(call, _("invalid value for 'plot'"));
+        if (atpen == NA_LOGICAL)
+            errorcall(call, _("invalid value for 'atpen'"));
         if (LENGTH(x) != LENGTH(y) || LENGTH(x) != LENGTH(l))
             errorcall(call, _("different argument lengths"));
         n = LENGTH(x);
@@ -3614,6 +3627,7 @@ SEXP do_identify(SEXP call, SEXP op, SEXP args, SEXP env)
             return NULL;
         }
 
+        Rf_gpptr(dd)->cex = Rf_gpptr(dd)->cexbase;
         offset = GConvertXUnits(asReal(Offset), CHARS, INCHES, dd);
         PROTECT(ind = allocVector(LGLSXP, n));
         PROTECT(pos = allocVector(INTSXP, n));
@@ -3622,6 +3636,8 @@ SEXP do_identify(SEXP call, SEXP op, SEXP args, SEXP env)
 
         k = 0;
         GMode(2, dd);
+        PROTECT(x = duplicate(x));
+        PROTECT(y = duplicate(y));
         while (k < npts)
         {
             if (!GLocator(&xp, &yp, INCHES, dd))
@@ -3645,44 +3661,55 @@ SEXP do_identify(SEXP call, SEXP op, SEXP args, SEXP env)
             /* can't use warning because we want to print immediately  */
             /* might want to handle warn=2? */
             warn = asInteger(GetOption(install("warn"), R_NilValue));
-            if (dmin > THRESHOLD)
+            if (dmin > tol)
             {
                 if (warn >= 0)
-                    REprintf(_("warning: no point with %.2f inches\n"), THRESHOLD);
+                {
+                    REprintf(_("warning: no point with %.2f inches\n"), tol);
+                    R_FlushConsole();
+                }
             }
             else if (LOGICAL(ind)[imin])
             {
                 if (warn >= 0)
+                {
                     REprintf(_("warning: nearest point already identified\n"));
+                    R_FlushConsole();
+                }
             }
             else
             {
                 k++;
                 LOGICAL(ind)[imin] = 1;
 
-                xi = REAL(x)[imin];
-                yi = REAL(y)[imin];
-                GConvert(&xi, &yi, USER, INCHES, dd);
-                if (fabs(xp - xi) >= fabs(yp - yi))
+                if (atpen)
                 {
-                    if (xp >= xi)
-                    {
-                        INTEGER(pos)[imin] = 4;
-                    }
-                    else
-                    {
-                        INTEGER(pos)[imin] = 2;
-                    }
+                    xi = xp;
+                    yi = yp;
+                    INTEGER(pos)[imin] = 0;
+                    /* now record where to replot if necessary */
+                    GConvert(&xp, &yp, INCHES, USER, dd);
+                    REAL(x)[imin] = xp;
+                    REAL(y)[imin] = yp;
                 }
                 else
                 {
-                    if (yp >= yi)
+                    xi = REAL(x)[imin];
+                    yi = REAL(y)[imin];
+                    GConvert(&xi, &yi, USER, INCHES, dd);
+                    if (fabs(xp - xi) >= fabs(yp - yi))
                     {
-                        INTEGER(pos)[imin] = 3;
+                        if (xp >= xi)
+                            INTEGER(pos)[imin] = 4;
+                        else
+                            INTEGER(pos)[imin] = 2;
                     }
                     else
                     {
-                        INTEGER(pos)[imin] = 1;
+                        if (yp >= yi)
+                            INTEGER(pos)[imin] = 3;
+                        else
+                            INTEGER(pos)[imin] = 1;
                     }
                 }
                 if (plot)
@@ -3708,7 +3735,7 @@ SEXP do_identify(SEXP call, SEXP op, SEXP args, SEXP env)
            redraw the text labels beside identified points */
         if (GRecording(call, dd))
             recordGraphicOperation(op, saveans, dd);
-        UNPROTECT(5);
+        UNPROTECT(7);
 
         return ans;
     }
